feat: before presentation
